@@ -4,7 +4,9 @@
  */
 package controler;
 
+import dal.CategoryDAO;
 import dal.EventDAO;
+import dal.LocationDAO;
 import java.io.IOException;
 import java.io.PrintWriter;
 import jakarta.servlet.ServletException;
@@ -19,9 +21,13 @@ import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Date;
+import java.util.List;
 import model.Account;
+import model.Category;
 import model.Event;
+import model.Location;
 
 /**
  *
@@ -32,6 +38,10 @@ import model.Event;
 public class CreateEventServlet extends HttpServlet {
 
     EventDAO evd = new EventDAO();
+    CategoryDAO cad = new CategoryDAO();
+    LocationDAO lod = new LocationDAO();
+    List<Category> listcategory = cad.getAllCategory();
+    List<Location> listlocation = lod.getAlltLocation();
 
     /**
      * Processes requests for both HTTP <code>GET</code> and <code>POST</code>
@@ -71,6 +81,8 @@ public class CreateEventServlet extends HttpServlet {
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
+        request.setAttribute("listlocation", listlocation);
+        request.setAttribute("listcategory", listcategory);
         request.getRequestDispatcher("CreateEvent_Ticket.jsp").forward(request, response);
     }
 
@@ -97,49 +109,100 @@ public class CreateEventServlet extends HttpServlet {
         String ve3 = request.getParameter("ve3");
         HttpSession session = request.getSession();
         Account acc = (Account) session.getAttribute("account");
-
+        request.setAttribute("nameEvent", nameEvent);
+        request.setAttribute("categoryId", categoryId);
+        request.setAttribute("timeStart", timeStart);
+        request.setAttribute("period", period);
+        request.setAttribute("describeEvent", describeEvent);
+        request.setAttribute("locationId", locationId);
+        request.setAttribute("ve1", ve1);
+        request.setAttribute("ve2", ve2);
+        request.setAttribute("ve3", ve3);
+        request.setAttribute("listlocation", listlocation);
+        request.setAttribute("listcategory", listcategory);
         //image
-        Part part = request.getPart("photo");
-        if (part.getSubmittedFileName() == null
-                || part.getSubmittedFileName().trim().isEmpty()
-                || part == null) {
-            response.sendRedirect("newjsp.jsp");
-
+        String err = "";
+        String pass = "";
+        // kiểm tra tên 
+        if (nameEvent.isBlank() || (nameEvent.length() <= 4) || (nameEvent.length() >= 100)) {
+            err = "Tên sự kiện phải dài hơn 4 kí tự và bé hơn 100 ký tự";
         } else {
-            try {
-                // lay duong dan luu anh
-                String path = request.getServletContext().getRealPath("/image");
-                File dir = new File(path);
+            // kiểm tra thể loại sự kiện
+            if (categoryId.isBlank()) {
+                err = "Hãy chọn thể loại sự kiện";
+            } else {
+                // kiểm tra thời gian bắt đầu
+                if (timeStart.isBlank()) {
+                    err = "Thời gian bắt đầu không được để trống";
+                } else {
+                    // kiểm tra mô tả chi tiết
+                    if (describeEvent.isBlank() || (describeEvent.length() <= 4) || (describeEvent.length() >= 1200)) {
+                        err = "Mô tả chi tiết sự kiện phải dài hơn 4 kí tự và bé hơn 1200 kí tự";
+                    } else {
+                        // kiểm tra địa điểm 
+                        if (locationId.isBlank()) {
+                            err = "Không được để trống địa chỉ";
+                        } else {
+                            // kiểm tra giá tiền 
+                            if ((Integer.parseInt(ve1) < 0) || (Integer.parseInt(ve2) < 0) || (Integer.parseInt(ve3) < 0)) {
+                                err = "Giá tiền các loại vé phải lớn hoặc bằng 0";
+                            } else {
+                                if ((Integer.parseInt(ve1) > 10000000) || (Integer.parseInt(ve2) > 10000000) || (Integer.parseInt(ve3) > 10000000)) {
+                                    err = "Giá tiền phải bé hơn 10.000.000 ";
+                                } else {
+                                    Part part = request.getPart("photo");
+                                    // kiểm tra ảnh
+                                    if (part.getSubmittedFileName() == null
+                                            || part.getSubmittedFileName().trim().isEmpty()
+                                            || part == null) {
+                                        err = "File ảnh phải đúng định dạng và không được để trống";
+                                    } else {
+                                        try {
+                                            // lay duong dan luu anh
+                                            String path = request.getServletContext().getRealPath("/image");
+                                            File dir = new File(path);
 
-                // xem duong dan nay da ton tai chua
-                if (!dir.exists()) {
-                    // neu chua thì tạo
-                    dir.mkdirs();
+                                            // xem duong dan nay da ton tai chua
+                                            if (!dir.exists()) {
+                                                // neu chua thì tạo
+                                                dir.mkdirs();
+                                            }
+                                            File image = new File(dir, part.getSubmittedFileName());
+
+                                            //ghi file vao trong duong dan 
+                                            part.write(image.getAbsolutePath());
+                                            // lấy đường dẫn của ảnh khi lưu vào để lưu vào db
+                                            String pathOfFile = request.getContextPath() + "/image/" + image.getName();
+
+                                            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm");
+                                            LocalDateTime localDateTime = LocalDateTime.parse(timeStart, formatter);
+
+                                            // Chuyển đổi LocalDateTime thành Timestamp cho TimeStart và TimeEnd
+                                            Timestamp timestamp1 = Timestamp.valueOf(localDateTime);
+                                            Timestamp timestamp2 = Timestamp.valueOf(localDateTime.plusMinutes(Integer.parseInt(period)));
+                                            if (evd.addEvent(new Event(categoryId, nameEvent, describeEvent, pathOfFile, locationId, timestamp1.toString(), timestamp2.toString(), ve1, ve2, ve3, acc.getId(), "0"))) {
+                                                pass = "Đã tạo thành công sự kiện " + nameEvent;
+                                                request.setAttribute("pass", pass);
+
+                                            } else {
+                                                err = "Không thể tạo được sự kiện";
+                                            }
+
+                                        } catch (Exception e) {
+                                            err="giá vé phải là số lớn hơn 0 và bé hơn 10000000";
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
-                File image = new File(dir, part.getSubmittedFileName());
-
-                //ghi file vao trong duong dan 
-                part.write(image.getAbsolutePath());
-                // lấy đường dẫn của ảnh khi lưu vào để lưu vào db
-                String pathOfFile = request.getContextPath() + "/image/" + image.getName();
-
-                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm");
-                LocalDateTime localDateTime = LocalDateTime.parse(timeStart, formatter);
-
-                // Chuyển đổi LocalDateTime thành Timestamp cho TimeStart và TimeEnd
-                Timestamp timestamp1 = Timestamp.valueOf(localDateTime);
-                Timestamp timestamp2 = Timestamp.valueOf(localDateTime.plusMinutes(Integer.parseInt(period)));
-//                if (evd.addEvent(new Event(categoryId, nameEvent, describeEvent, pathOfFile, locationId, timestamp1.toString(), timestamp2.toString(), ve1, ve2, ve3, acc.getId(), "0"))) {
-//                    request.getRequestDispatcher("CreateEvent_Ticket.jsp").forward(request, response);
-//                } else {
-//                    response.sendRedirect("Home.jsp");
-//                }
-            out.println(timestamp1.toString());
-            out.println(timestamp2.toString());
-            } catch (Exception e) {
-
             }
         }
+        request.setAttribute("err", err);
+        request.getRequestDispatcher("CreateEvent_Ticket.jsp").forward(request, response);
+        return;
+
     }
 
     /**
